# thinkpalm-agentai-arcnical-teamgamma

./: .gitignore  README.md  create_stubs.sh  pyproject.toml  run_checklist.bat  setup_dirs.sh  streamlit_app.py  tests_check_evidence.py  tests_check_l2.py
.claude/: settings.local.json
arcnical/: __init__.py  cli_bridge.py  schema.py
arcnical/cache/: __init__.py
arcnical/cli/: __init__.py  commands.py  json_exporter.py
arcnical/eval/: __init__.py
arcnical/graph/: __init__.py  builder.py  graph_builder.py
arcnical/heuristics/: __init__.py  evaluator.py  l2_detector.py  l3_detector.py  security_scanner.py
arcnical/ingest/: __init__.py
arcnical/layers/: l1.yaml  l2.yaml  l3.yaml  l4.yaml
arcnical/metrics/: __init__.py  calculator.py
arcnical/orchestrator/: __init__.py  orchestrator.py
arcnical/parse/: __init__.py  parser.py  python_parser.py  typescript_parser.py
arcnical/practice/: __init__.py
arcnical/qualification/: __init__.py
arcnical/report/: __init__.py
arcnical/review/: __init__.py
arcnical/review/prompts/: __init__.py
arcnical/review/tools/: __init__.py
arcnical/security/: __init__.py
arcnical/ui/: __init__.py  graph_components.py
docs/ADR/: arcnical_architecture.html  arcnical_prototype.html
tests/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_graph.py  test_heuristics_l2.py  test_heuristics_l3.py  test_metrics.py  test_parser.py  test_schema.py  test_security.py
