[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arcnical"
version = "0.2.0"
description = "Clinical architecture reviews for your codebase"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Arcnical Team", email = "team@arcnical.dev"}]

keywords = ["architecture", "code-review", "analysis", "python", "typescript"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# Core dependencies
dependencies = [
    # CLI & TUI
    "typer[all]>=0.12.0",          # CLI framework with type hints
    "rich>=13.7.0",                # Terminal output (progress, tables, syntax)
    
    # Parsing & Analysis
    "tree-sitter>=0.21.0",         # AST parsing
    "tree-sitter-python>=0.21.0",  # Python grammar
    "tree-sitter-typescript>=0.21.0",  # TypeScript/JavaScript grammar
    
    # Graph & Metrics
    "networkx>=3.2",               # Graph algorithms (cycles, etc)
    "radon>=6.0",                  # Python complexity metrics
    
    # Git & Repo Access
    "gitpython>=3.1.40",           # Git operations
    
    # LLM & AI
    "anthropic>=0.18.0",           # Anthropic Claude API
    
    # Data & Schema
    "pydantic>=2.5.0",             # Output schema validation
    "pydantic-settings>=2.1.0",    # Config file support
    
    # Web UI
    "streamlit>=1.28.0",           # Interactive viewer
    
    # Templates & Rendering
    "jinja2>=3.1.0",               # Report templating
    
    # Utilities
    "pyyaml>=6.0.0",               # Layer config files
    "python-dotenv>=1.0.0",        # .env support
    "aiofiles>=23.2.0",            # Async file I/O
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",               # Testing
    "pytest-asyncio>=0.23.0",      # Async test support
    "pytest-cov>=4.1.0",           # Coverage
    "ruff>=0.1.0",                 # Linting (fast Python linter)
    "mypy>=1.7.0",                 # Type checking
    "types-pyyaml>=6.0.0",         # Type stubs for pyyaml
    "types-aiofiles>=23.2.0",      # Type stubs for aiofiles
]

security = [
    "gitleaks>=8.18.0",            # Secret detection
    "pip-audit>=2.6.0",            # Python dependency audit
]

[project.urls]
Homepage = "https://github.com/arcnical/arcnical"
Documentation = "https://github.com/arcnical/arcnical#readme"
Repository = "https://github.com/arcnical/arcnical.git"
Issues = "https://github.com/arcnical/arcnical/issues"

[project.scripts]
arcnical = "arcnical.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["arcnical"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "types-pyyaml>=6.0.0",
    "types-aiofiles>=23.2.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # Pyflakes
    "I",     # isort
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
    "ARG",   # flake8-unused-arguments
    "RUF",   # Ruff-specific rules
]
ignore = [
    "E501",  # Line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["arcnical"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "tree_sitter.*",
    "tree_sitter_python.*",
    "tree_sitter_typescript.*",
    "radon.*",
    "networkx.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.4"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=arcnical",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
]

[tool.coverage.run]
source = ["arcnical"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
